Moved java args to env